...
extension AppSectionDetails on AppSection {
  String get title {
    switch (this) {
      case AppSection.home:
        return 'Home';
      case AppSection.inbox:
        return 'Inbox';
      case AppSection.projects:
        return 'Projects';
      case AppSection.tasks:
        return 'Tasks';
      case AppSection.meetings:
        return 'Meetings';
...
